GNOME Bugzilla – Bug 794272
Initialize write buffer to avoid valgrind warning
Last modified: 2018-03-12 23:52:06 UTC
Valgrind complains that this buffer is not fully initialized.
Created attachment 369593 [details] [review] sp-capture-writer: Initialize write buffer Valgrind notes that the buffer is not fully initialized when we pass it to write(). This could potentially write sensitive data, if we are not careful with the buffer length. See https://gitlab.gnome.org/GNOME/gjs/issues/120
Sure, LGTM Attachment 369593 [details] pushed as c3d1fd0 - sp-capture-writer: Initialize write buffer