sysprof: Initialize buffer in SpCaptureWriter

Valgrind notes that the buffer is not fully initialized when passed to
write(). This could potentially write sensitive data, if we are not
careful with the buffer length.

Reported upstream: https://bugzilla.gnome.org/show_bug.cgi?id=794272

See #120.